--- a/index.html
+++ b/index.html
@@ -11,13 +11,14 @@
             padding: 0;
         }
     </style>
-    <title>Fitter Camp Title</title>
+    <title>Sohojatri - AkijBashir Group</title>
 </head>
 <body>
     <iframe src="https://script.google.com/macros/s/AKfycbxg0CVd_n3WQ36r67ujfQzfcERIKl-7POq_OKhhe0e87gwJiMiZ3O2qLMWDTsZ1StyZcQ/exec" frameborder="0" allow="camera; microphone; clipboard-read; clipboard-write"></iframe>
 </body>
 
 </html>
+
 
 
 
